--- a/_includes/main-template.njk
+++ b/_includes/main-template.njk
@@ -37,7 +37,7 @@
 
         <!--Picture banner-->
         <section class="banner">
-            <h1 class="title banner__title--big">Prodejna zdravé výživy</h1>
+            <h1 class="title banner__title--big">prodejna zdravé výživy</h1>
         </section>
 
         <!--main template-->
@@ -60,7 +60,7 @@
 
 
    {{ content | safe }}
-
+   
     </main>
 
     <!--Adress and payment options-->
@@ -92,8 +92,7 @@
 
     <!--Footer-->
     <footer class="footer">
-        © Kristýna Černyševa 2022
+        © 2022, Kristýna Černyševa 
     </footer>
-
 </body>
 </html>
