--- a/_includes/second-template.njk
+++ b/_includes/second-template.njk
@@ -71,7 +71,7 @@
 
     <!--Footer-->
     <footer class="footer">
-        © Kristýna Černyševa 2022
+        © 2022, Kristýna Černyševa 
     </footer>
 
 </body>
