--- a/scss/base/_basic.scss
+++ b/scss/base/_basic.scss
@@ -15,6 +15,7 @@ body {
 .title {
     font-family: styles.$font-special;
     font-style: italic;
+    font-weight: 400;
     margin: 0;
     padding: 0;
 }
