--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,17 +26,6 @@
         margin-top: styles.$spacer-bottom;
     }
 
-    .Outside-photo {
-        grid-column: 1 / 8;
-        justify-self: center;
-   
-
-        &__shop {
-            padding: 0 60px;
-            width: 100%;
-        }
-    }
-
     .section-logos {
         display: block;
         grid-column: 3 / 7;
@@ -48,10 +37,16 @@
 
 /*layout box with actualities and opening hours*/
 
+@keyframes aside-move {
+    from { transform: translate(-9999px, 0 ); }
+    to { transform: translate(0, 0); }
+}
+
 .box-hours {
     color: white;
     background-color: styles.$c-primary;
     padding: 20px;
+
 
     &__title--small {
         font-size: 24px;
@@ -63,7 +58,8 @@
         position: relative;
         left: -115px;
         width: 240px;  
-        border-radius: 0 10% 0 0;
+        border-radius: 3px 40px;
+        animation: aside-move 2s;
     }
 }
 
@@ -73,18 +69,15 @@
     text-align: center;
     padding: 20px;
     margin-bottom: styles.$spacer-bottom;
-
-    &__title--small {
-        font-size: 24px;
-        text-align: center;
-    }
+    order:2;
 
     @media screen and (min-width: 1000px) {
         position: relative;
         left: -115px;
         bottom: -30px;
         width: 240px;
-        border-radius: 0 0 20px 20px;
+        border-radius: 40px 3px;
+        animation: aside-move 2s;
     }
 
 }
@@ -119,15 +112,28 @@
     gap: 20px;
 
     &__logo {
+        max-width: 170px;
         width: 100%;
     }
+
 }
 
 
 /*section with photo and icons*/
-.Outside-photo__shop {
-    max-width: 100%;
-    margin-bottom: styles.$spacer-bottom;
+
+.Outside-photo {
+    padding: 0 20px;
+    
+    @media screen and (min-width: 1000px) {
+        grid-column: 3 / 7;
+        padding: 0 0;
+    }
+   
+
+    &__shop {
+        width: 100%;
+        margin-bottom: styles.$spacer-bottom;
+    }
 }
 
 .allergens-icons {
@@ -139,7 +145,7 @@
     @media screen and (min-width: 1000px) {
         grid-column: 1 / 8;
         justify-content: center;
-        gap: 50px;
+        gap: 100px;
         
     }
 }
@@ -148,10 +154,10 @@
     max-width: 100%;
     border: 1px solid styles.$c-special;
     border-radius: 50%; 
+    width: 60px;
+    height: 60px;
 
     @media screen and (min-width: 1000px) {
-            width: 90px;
-            height: 90px;
             border: 2px solid styles.$c-special;
     }
 }
@@ -198,11 +204,10 @@
 
         @media screen and (min-width: 1000px) {
             flex-basis: 30%;
+            min-height: 312px;
+            min-width: 464px;
             background-color: styles.$c-border-box;
-            padding: 0 20px 50px 50px;
-            box-shadow: 2px 2px 4px #e7e7e7;
-            border-radius: 5px 0 5px 40%;
-            
+            padding: 20px;
         }
     }
 
@@ -212,6 +217,11 @@
         font-size: 38px;
         margin-bottom: 30px;
         margin-top: 30px;
+
+        @media screen and(min-width: 1000px) {
+            margin: 0;
+            
+        }
     }
 
      
@@ -291,7 +301,7 @@
 .main-information__title-contact--medium {
     margin-bottom: 15px;
     color: styles.$c-secondary;
-    font-size: 32px;
+    font-size: 38px;
 }
 
 .contact-icons {
@@ -312,10 +322,10 @@
 }
 
 .google-map {
-    grid-column: 1 / 8;
-    height: 300px;
+    grid-column: 3 / 7;
+    height: 450px;
     width: 100%;
     padding: 0;
-    margin: 0;
+    margin: 0 0 70px 0;
 }
 
